# Git-gud

./: README.md  WRITEUP.md
backend/: .env.example  .gitignore  manage.py  pyproject.toml
backend/apps/core/: admin.py  models.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/events/: admin.py  apps.py  models.py
backend/apps/events/migrations/: 0001_initial.py
backend/apps/git_data/: admin.py  apps.py  mixins.py  models.py
backend/apps/git_data/migrations/: 0001_initial.py  0002_remove_repo_git_repo_source__b736b1_idx_and_more.py  0003_commit_from_event.py  0004_repo_latest_event_checked.py  __init__.py
backend/apps/search/: admin.py  apps.py  models.py  services.py
backend/apps/search/migrations/: 0001_initial.py  0002_alter_match_options_alter_regex_options_and_more.py  0003_regex_last_processed_at.py  0004_alter_match_filename_alter_match_match_and_more.py
backend/apps/task_queue/: admin.py  apps.py  backends.py  forms.py  models.py  worker_runtime.py
backend/apps/task_queue/migrations/: 0001_initial.py  0002_taskworker_claim_expires_at_taskworker_model_claims.py  __init__.py
backend/apps/task_queue/tasks/: __init__.py  find_matches.py  get_raw_events.py  process_commits.py  process_gists.py  process_repositories.py  process_users.py  sync_event_commits.py  user_discovery.py
backend/clients/: __init__.py  github.py
backend/config/: settings.py  urls.py
backend/static/admin/js/: user_status.js
backend/templates/admin/: reset_processed_at_changelist.html
backend/templates/admin/task_queue/: add_task.html
(+25 files in other folders)
